# Core

./: .gitignore  Cargo.toml  README.md  clippy_fmt.sh  rustfmt.toml
crates/sp1-utils/: Cargo.toml
crates/sp1-utils/src/: lib.rs
crates/zelana-core/: Cargo.toml  README.md
crates/zelana-core/src/: crypto.rs  identity.rs  lib.rs  prover.rs  transaction.rs
crates/zelana-execution/: Cargo.toml
crates/zelana-execution/src/: lib.rs  memory.rs  processor.rs  storage.rs
crates/zelana-net/: Cargo.toml
crates/zelana-net/src/: crypto.rs  lib.rs  protocol.rs
crates/zelana-sdk/: Cargo.toml  README.md
crates/zelana-sdk/examples/: bench_throughput.rs  demo.rs  deposit.rs  full_lifecycle.rs
crates/zelana-sdk/src/: client.rs  lib.rs  wallet.rs
data/sequencer_db/: 000024.sst  IDENTITY  LOG  LOG.old.1764483741961738  LOG.old.1764483920940670  LOG.old.1764484044119115  LOG.old.1764485565486521  LOG.old.1764485706507668  MANIFEST-000026  OPTIONS-000023
doc/: Architecture.md
guests/sp1-prover/: Cargo.toml  README.md
guests/sp1-prover/script/: Cargo.toml  build.rs
guests/sp1-prover/script/src/: lib.rs  sp1_wincode.rs
guests/sp1-prover/src/: main.rs  simple_store.rs
services/sequencer/: Cargo.toml  README.md
services/sequencer/src/: db.rs  executor.rs  ingest.rs  main.rs  session.rs
services/sequencer/tests/: network_integration.rs
tools/: Cargo.toml
tools/src/: bin2json.rs  main.rs
