[workspace]
resolver = "2"
members = [
    "crates/zelana-core",
    "crates/zelana-net",
    "crates/zelana-sdk",
    "crates/zelana-execution",
    "services/sequencer",
    "guests/sp1-prover",
]

[workspace.dependencies]
zelana-core = {path = "crates/zelana-core"}
zelana-net  = {path = "crates/zelana-net"}
zelana-sdk  = {path = "crates/zelana-sdk"}
wincode = "0.2.1"
blake3 = "1.8.2"
sha2 = "0.10.9"
ed25519-dalek = "2.2.0"
x25519-dalek = "2.0.1"
chacha20poly1305 = "0.10.1"
rand_core = {version  = "0.9.3" , features = ["os_rng"]}
wincode-derive = "0.2.0"
tokio = { version = "1.48.0" , features = ["full"]}
anyhow = "1.0.100"
thiserror = "2.0.17"

sp1-zkvm = "5.2.3"
