[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin2json"
path = "src/bin2json.rs"

[dependencies]
anyhow = {workspace = true}
zelana-core = { workspace = true}
wincode = { workspace = true}
hex = "0.4.3"
json = "0.12.1"
clap = { version = "4.0", features = ["derive"] }

