[package]
name = "zelana-net"
version = "0.1.0"
edition = "2021"
description = "Encrypted UDP transport layer for Zelana"

[dependencies]
# Core definitions
zelana-core = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
hkdf = "0.12"
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
rand_core = {workspace = true}

[features]
default = ["async"]
async = ["tokio"]