[package]
name = "zelana-sdk"
version = "0.1.0"
edition = "2021"
description = "Client SDK for building applications on Zelana"

[dependencies]
# Internal
zelana-core = { workspace = true }
zelana-net = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "sync"] }
ed25519-dalek = { workspace = true, features = ["rand_core"]}
x25519-dalek = { workspace = true, features = ["static_secrets"] }
rand_core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
env_logger = "0.11.8"
wincode = {workspace = true}
chacha20poly1305={workspace= true}
solana-commitment-config = "3.1.0"

[dev-dependencies]
solana-client = "3.1.3"
solana-sdk = "3.0.0"
borsh = "1.6.0"
solana-program = "3.0.0"