[package]
name = "zelana-sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
zelana-core = { workspace = true }
zelana-net = { workspace = true }
zelana-sdk = { workspace = true }
zelana-execution = {workspace = true}

solana-client = {workspace = true}
solana-pubkey = {workspace = true}
solana-commitment-config = {workspace = true}

regex = "1.12.2"

rocksdb = "0.24.0"

tokio = { workspace = true, features = ["full"] }
tokio-stream  = "0.1.17"
tokio-util = "0.7.17"
wincode = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
anyhow = { workspace = true }
dashmap = "6.1.0" 
log = "0.4.29"
env_logger = "0.11.8"